--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,6 +22,6 @@ options:
 timeout: 1800s
 substitutions:
   _REGION: northamerica-northeast1
-  _BUILD_NAME: $_REGION-docker.pkg.dev/${_PROJECT_ID}/docker-builds/builder
+  _BUILD_NAME: northamerica-northeast1-docker.pkg.dev/${_PROJECT_ID}/docker-builds/builder
   _TERRA_SA: sa-terraform@${_PROJECT_ID}.iam.gserviceaccount.com
   _IMAGE_BASE: northamerica-northeast1-docker.pkg.dev/${_PROJECT_ID}/docker-builds/
